.docker/kubernetes/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  namespace: apadmin
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - secretName: cert-apcode.com.br
  rules:
    - host: api-admin.apcode.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: admin-backend
                port:
                  name: admin-back
    - host: admin.apcode.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: admin-frontend
                port:
                  name: admin-front
